--- a/ios/ShoppingApp/Info.plist
+++ b/ios/ShoppingApp/Info.plist
@@ -48,5 +48,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+<!-- Add this inside the <dict> tag -->
+<key>CFBundleURLTypes</key>
+<array>
+  <dict>
+    <key>CFBundleURLSchemes</key>
+    <array>
+      <string>shoppingapp</string>
+    </array>
+  </dict>
+</array>
 </dict>
 </plist>
