--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-native-community/netinfo": "^11.4.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
-    "react-native-linear-gradient": "^2.8.3"
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-share": "^12.0.9",
+    "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -37,8 +40,8 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.9.0",
     "react-redux": "^9.0.4",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
